--- a/LogView/LogView.vcxproj.filters
+++ b/LogView/LogView.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClCompile Include="config.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lotw.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
