--- a/LogView/LogView.vcxproj
+++ b/LogView/LogView.vcxproj
@@ -129,8 +129,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="config.h" />
     <ClInclude Include="LogView.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="lookup.h" />
+    <ClInclude Include="lotw.h" />
+    <ClInclude Include="reader.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -143,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="config.cpp" />
+    <ClCompile Include="eqsl.cpp" />
     <ClCompile Include="LogView.cpp" />
     <ClCompile Include="lookup.cpp" />
     <ClCompile Include="lotw.cpp" />
