--- a/LogView/LogView.vcxproj.filters
+++ b/LogView/LogView.vcxproj.filters
@@ -27,6 +27,18 @@
     <ClInclude Include="LogView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="reader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lookup.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lotw.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="LogView.rc">
@@ -55,6 +67,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="lotw.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="eqsl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
