Add eQSL and handlers for multiple entries for the same person. Also some column fixes.

--- a/LogView/LogView.vcxproj.filters
+++ b/LogView/LogView.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="lotw.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="eqsl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="LogView.rc">
