--- a/LogView/LogView.vcxproj
+++ b/LogView/LogView.vcxproj
@@ -130,6 +130,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="config.h" />
+    <ClInclude Include="eqsl.h" />
     <ClInclude Include="LogView.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="lookup.h" />
