--- a/LogView/LogView.vcxproj.filters
+++ b/LogView/LogView.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="eqsl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ListViewChild.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="LogView.rc">
@@ -73,6 +76,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="eqsl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ListViewChild.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
